If no status -> now instantiates empty record